--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
+    "firebase": "^11.6.1",
     "react": "^19.0.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.3"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
+    "react-signature-canvas": "^1.1.0-alpha.2",
+    "react-simple-captcha": "^9.3.1",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
