--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "react-scroll": "^1.9.3",
     "react-signature-canvas": "^1.1.0-alpha.2",
     "react-simple-captcha": "^9.3.1",
     "swiper": "^11.2.6"
